fixed scrollbar bug, added animations to footer-items

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -14,6 +14,7 @@
   /* ANIMATION */
   animation-duration: 1s;
   animation-timing-function: ease-in;
+  padding: 1rem;
 }
 
 .btn:hover {
@@ -35,10 +36,14 @@
   background-color: rgba(255, 255, 255, 0); 
   border: 1px solid #fff;
   color: #fff;
-  
 }
 
 #header-button:hover {
   color: #000;
   background-color: #fff;
+}
+
+a.btn {
+  text-align: center;
+  color: #000;
 }
