--- a/styles/landing.css
+++ b/styles/landing.css
@@ -5,7 +5,7 @@ header {
   /* width: 100vw;
   height: 45rem; */
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0 auto;
   /* ANIMATION */
   animation-duration: 1s;
@@ -13,6 +13,7 @@ header {
 }
 
 h1 {
+  width: 100%;
   color: rgba(255, 255, 255, 0.90);
   font-size: 4.7rem;
   text-align: center;
@@ -40,7 +41,6 @@ h1 {
 
 @media (max-width: 600px) {
   h1 {
-    font-size: 1.4rem;
-    margin-left: 1rem;
+    font-size: 1.2rem;
   }
 }
