--- a/styles/main.css
+++ b/styles/main.css
@@ -27,10 +27,10 @@ body {
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
   background-color: var(--main-bg-color);
-  height: 100vh;
 }
 
 main {
+  font-size: 1.1rem;
   margin: 0 15%;
   overflow: hidden;
 }
@@ -40,7 +40,7 @@ main article {
 }
 
 main article h2 {
-  font-size: 1.8rem;
+  font-size: 2rem;
   text-align: center;
   margin-bottom: 2rem;
 }
